   + fixed output-filename parsing bug in gfsmlabels
   + added check for fsm->states->len==0 in is_cyclic(), fixes bug in gfsminfo
     for empty automata created with gfsm_automaton_copy_shallow() (aka 'shadow')
     - the real problem here is probably that copy_shallow() also copies root_id, even
       though the corresponding state doesn't exist

v0.0.8 Thu, 15 Feb 2007 12:05:41 +0100
   + updated build system to build more cleanly on non-development systems
     - e.g. missing optgen.perl, flex, bison, pod2x, perl, etc.
   + added gfsm.magic snippet for /etc/magic
     - added 'install-magic' and 'uninstall-magic' targets for
       manual magic maintainance, since there seems to be no good and safe
       way to do this automagically (ugh)...
   + added support for final weights
   + changed binary format (backwards-compatible with dispatch function)
   + added final-weight operations final_weight_(plus|times)()
   + added optional(), replace(), insert_automaton()
   + added lookup_viterbi(), viterbi_trellis_paths(), viterbi_trellis_bestpath()
   + fixed a bug in gfsm_automaton_renumber_states()
   + fixed a really stupid bug in gfsm_arclist_insert_link() for sorted insertion
   + fixed some bugs in gfsm_automaton_rmepsilon()
   + fixed an epsilon-related bug in compose() and intersect()
   + fixed another epsilon-related bug in compose()
     - implemented algorithm from:
	  Mohri, Pereira, & Riley (1996), "Weighted Automata in Text and Speech
	  Processing", Proc. ECAI '96, John Wiley & Sons, Ltd.
     - calling conventions changed for compose_full()
   + added gfsmScanner.[ch], gfsmRegexCompiler.[ch]
   + added gfsmTrie, (quasi-)deterministic input acceptor (i/o pairs)
     - currently geared towards storing frequencies
   + added gfsmIO.[ch] : abstract I/O layer
     - includes basic zlib compression support
     - currently used only for text & binary automaton I/O, also text alphabet I/O