@@ -10,6 +10,7 @@ v0.0.9 Fri, 23 Feb 2007 18:38:36 +0100
      for empty automata created with gfsm_automaton_copy_shallow() (aka 'shadow')
      - the real problem here is probably that copy_shallow() also copies root_id, even
        though the corresponding state doesn't exist
+   + added gfsmArcIter copy() and clone() methods
 
 v0.0.8 Thu, 15 Feb 2007 12:05:41 +0100
    + updated build system to build more cleanly on non-development systems
